[tool.poetry]
name = "aula08-bootcamp"
version = "0.1.0"
description = ""
authors = ["Marcos Vinicius <vini.markinhos@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandera = "^0.18.0"
pandas = "^2.2.1"
fastparquet = "^0.7.1" 



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
